[tool.poetry]
name = "volttron-lib-base-historian"
version = "0.2.0-rc"
description = "A base library with extension points for using with the VOLTTRON platform."
authors = ["VOLTTRON Team <volttron@pnnl.gov>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/eclipse-volttron/volttron-lib-base-historian"
homepage = "https://github.com/eclipse-volttron/volttron-lib-base-historian"
keywords = []
packages = [ { include = "historian", from = "src" }, { include = "historian", from = "tests" } ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
volttron = ">=10.0.2rc0,<11.0"

ply = "^3.11"

[tool.poetry.group.dev.dependencies]
# formatting, quality, tests
pytest = "^6.2.5"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.10.1"
safety = "^1.10.3"
mypy = "^0.942"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
volttron-testing = "^0.4.0rc0"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# tasks
git-changelog = ">=0.5.0"
httpx = ">=0.16.1"
jinja2-cli = ">=0.7.0"
toml = ">=0.10.2"
